Add gpu accelerated langevin

--- a/AP229.ipynb
+++ b/AP229.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "019814ea-c61b-4761-bae9-3eb504894003",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "1b61c3d0-427c-41c2-be6b-2525554e7178",
    "metadata": {},
    "outputs": [],
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "91ef84f0-3587-448b-b2f9-a5efcc2470ef",
    "metadata": {},
    "outputs": [
@@ -207,11 +207,11 @@
      "output_type": "stream",
      "text": [
       "Testing with N=100\n",
-      "  Spike generation: 0.0005s\n",
-      "  Tensor initialization: 0.0019s\n",
-      "  Tensor filling: 0.1331s\n",
-      "  Total time: 0.1357s\n",
-      "generate_spiked_matrix_tensor_optimized took 0.1359 seconds\n",
+      "  Spike generation: 0.0013s\n",
+      "  Tensor initialization: 0.0000s\n",
+      "  Tensor filling: 0.2633s\n",
+      "  Total time: 0.2648s\n",
+      "generate_spiked_matrix_tensor_optimized took 0.2649 seconds\n",
       "\n",
       "Spike norm: 10.0000 (should be ~10.0000)\n",
       "Tensor shape: (100, 100, 100)\n",
@@ -226,14 +226,14 @@
       "==================================================\n",
       "\n",
       "Optimized version:\n",
-      "  Spike generation: 0.0000s\n",
+      "  Spike generation: 0.0001s\n",
       "  Tensor initialization: 0.0000s\n",
-      "  Tensor filling: 0.0127s\n",
-      "  Total time: 0.0128s\n",
-      "generate_spiked_matrix_tensor_optimized took 0.0128 seconds\n",
+      "  Tensor filling: 0.0337s\n",
+      "  Total time: 0.0339s\n",
+      "generate_spiked_matrix_tensor_optimized took 0.0340 seconds\n",
       "\n",
       "Ultra-optimized version:\n",
-      "Ultra-optimized total time: 0.0229s\n",
+      "Ultra-optimized total time: 0.0681s\n",
       "\n",
       "Results match: True\n",
       "\n",
@@ -242,14 +242,14 @@
       "==================================================\n",
       "\n",
       "Optimized version:\n",
-      "  Spike generation: 0.0000s\n",
-      "  Tensor initialization: 0.0002s\n",
-      "  Tensor filling: 0.1020s\n",
-      "  Total time: 0.1023s\n",
-      "generate_spiked_matrix_tensor_optimized took 0.1023 seconds\n",
+      "  Spike generation: 0.0001s\n",
+      "  Tensor initialization: 0.0003s\n",
+      "  Tensor filling: 0.2615s\n",
+      "  Total time: 0.2619s\n",
+      "generate_spiked_matrix_tensor_optimized took 0.2620 seconds\n",
       "\n",
       "Ultra-optimized version:\n",
-      "Ultra-optimized total time: 0.1914s\n",
+      "Ultra-optimized total time: 0.5500s\n",
       "\n",
       "Results match: True\n",
       "\n",
@@ -258,14 +258,14 @@
       "==================================================\n",
       "\n",
       "Optimized version:\n",
-      "  Spike generation: 0.0000s\n",
-      "  Tensor initialization: 0.0013s\n",
-      "  Tensor filling: 0.3440s\n",
-      "  Total time: 0.3453s\n",
-      "generate_spiked_matrix_tensor_optimized took 0.3455 seconds\n",
+      "  Spike generation: 0.0001s\n",
+      "  Tensor initialization: 0.0000s\n",
+      "  Tensor filling: 0.8964s\n",
+      "  Total time: 0.8966s\n",
+      "generate_spiked_matrix_tensor_optimized took 0.8966 seconds\n",
       "\n",
       "Ultra-optimized version:\n",
-      "Ultra-optimized total time: 0.6291s\n",
+      "Ultra-optimized total time: 1.9443s\n",
       "\n",
       "Results match: True\n",
       "\n",
@@ -274,32 +274,26 @@
       "==================================================\n",
       "\n",
       "Optimized version:\n",
-      "  Spike generation: 0.0000s\n",
+      "  Spike generation: 0.0002s\n",
       "  Tensor initialization: 0.0000s\n",
-      "  Tensor filling: 14.3317s\n",
-      "  Total time: 14.3318s\n",
-      "generate_spiked_matrix_tensor_optimized took 14.3344 seconds\n",
+      "  Tensor filling: 37.2001s\n",
+      "  Total time: 37.2005s\n",
+      "generate_spiked_matrix_tensor_optimized took 37.2137 seconds\n",
       "\n",
-      "Ultra-optimized version:\n",
-      "Ultra-optimized total time: 25.4185s\n",
-      "\n",
-      "Results match: True\n",
-      "\n",
-      "==================================================\n",
-      "N = 750 (Total unique triplets: 70031500)\n",
-      "==================================================\n",
-      "\n",
-      "Optimized version:\n",
-      "  Spike generation: 0.0005s\n",
-      "  Tensor initialization: 0.0000s\n",
-      "  Tensor filling: 47.8516s\n",
-      "  Total time: 47.8524s\n",
-      "generate_spiked_matrix_tensor_optimized took 47.8594 seconds\n",
-      "\n",
-      "Ultra-optimized version:\n",
-      "Ultra-optimized total time: 93.1371s\n",
-      "\n",
-      "Results match: True\n"
+      "Ultra-optimized version:\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 11\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# Run benchmark\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m60\u001b[39m)\n\u001b[0;32m---> 11\u001b[0m \u001b[43mbenchmark_implementations\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m50\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m150\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m500\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m750\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[2], line 120\u001b[0m, in \u001b[0;36mbenchmark_implementations\u001b[0;34m(N_values, Delta2, Delta_p)\u001b[0m\n\u001b[1;32m    118\u001b[0m \u001b[38;5;66;03m# Test ultra-optimized version\u001b[39;00m\n\u001b[1;32m    119\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mUltra-optimized version:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 120\u001b[0m x2, T2 \u001b[38;5;241m=\u001b[39m \u001b[43mgenerate_spiked_matrix_tensor_ultra_optimized\u001b[49m\u001b[43m(\u001b[49m\u001b[43mN\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mDelta2\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mDelta_p\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mseed\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m42\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    122\u001b[0m \u001b[38;5;66;03m# Verify results are identical\u001b[39;00m\n\u001b[1;32m    123\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mResults match: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnp\u001b[38;5;241m.\u001b[39mallclose(T1,\u001b[38;5;250m \u001b[39mT2)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[2], line 96\u001b[0m, in \u001b[0;36mgenerate_spiked_matrix_tensor_ultra_optimized\u001b[0;34m(N, Delta2, Delta_p, p, seed)\u001b[0m\n\u001b[1;32m     94\u001b[0m     val \u001b[38;5;241m=\u001b[39m values[idx]\n\u001b[1;32m     95\u001b[0m     T[i, j, k] \u001b[38;5;241m=\u001b[39m T[i, k, j] \u001b[38;5;241m=\u001b[39m T[j, i, k] \u001b[38;5;241m=\u001b[39m val\n\u001b[0;32m---> 96\u001b[0m     T[j, k, i] \u001b[38;5;241m=\u001b[39m T[k, i, j] \u001b[38;5;241m=\u001b[39m T[k, j, i] \u001b[38;5;241m=\u001b[39m val\n\u001b[1;32m     98\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUltra-optimized total time: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtime\u001b[38;5;241m.\u001b[39mperf_counter()\u001b[38;5;250m \u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;250m \u001b[39mstart_total\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124ms\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    100\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m x_star, T\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -369,79 +363,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Compiling Numba functions (this may take a moment on first run)...\n",
+      "Compiling Numba functions (this may take a moment on first run)...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "OMP: Info #276: omp_set_nested routine deprecated, please use omp_set_max_active_levels instead.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Compilation complete!\n",
       "\n",
       "Testing ultra-fast implementations...\n",
-      "\n",
-      "Using 8 threads\n",
-      "Numba tensor filling: 0.0040s\n",
-      "Total time: 0.0229s\n",
-      "generate_spiked_matrix_tensor_numba took 0.0229 seconds\n",
-      "\n",
-      "Tensor shape: (200, 200, 200)\n",
-      "Spike norm: 14.1421 (expected: 14.1421)\n",
-      "\n",
-      "======================================================================\n",
-      "Benchmarking fastest tensor generation implementations...\n",
-      "\n",
-      "\n",
-      "============================================================\n",
-      "N = 100 (Total unique triplets: 161,700)\n",
-      "============================================================\n",
-      "\n",
-      "Original optimized version:\n",
-      "Time: 0.1016s\n",
-      "\n",
-      "Numba parallel version:\n",
-      "Using 8 threads\n",
-      "Numba tensor filling: 0.0003s\n",
-      "Total time: 0.0024s\n",
-      "generate_spiked_matrix_tensor_numba took 0.0024 seconds\n",
-      "\n",
-      "Numba ultra-parallel version:\n",
-      "Using 8 threads (ultra-parallel)\n",
-      "Ultra-parallel tensor filling: 0.0008s\n",
-      "Total time: 0.0013s\n",
-      "generate_spiked_matrix_tensor_ultra_parallel took 0.0013 seconds\n",
-      "\n",
-      "============================================================\n",
-      "N = 250 (Total unique triplets: 2,573,000)\n",
-      "============================================================\n",
-      "\n",
-      "Original optimized version:\n",
-      "Time: 1.6873s\n",
-      "\n",
-      "Numba parallel version:\n",
-      "Using 8 threads\n",
-      "Numba tensor filling: 0.0156s\n",
-      "Total time: 0.0442s\n",
-      "generate_spiked_matrix_tensor_numba took 0.0445 seconds\n",
-      "\n",
-      "Numba ultra-parallel version:\n",
-      "Using 8 threads (ultra-parallel)\n",
-      "Ultra-parallel tensor filling: 0.0230s\n",
-      "Total time: 0.0230s\n",
-      "generate_spiked_matrix_tensor_ultra_parallel took 0.0231 seconds\n",
-      "\n",
-      "============================================================\n",
-      "N = 500 (Total unique triplets: 20,708,500)\n",
-      "============================================================\n",
-      "\n",
-      "Original optimized version:\n",
-      "Time: 14.3493s\n",
-      "\n",
-      "Numba parallel version:\n",
-      "Using 8 threads\n",
-      "Numba tensor filling: 0.1787s\n",
-      "Total time: 0.4098s\n",
-      "generate_spiked_matrix_tensor_numba took 0.4121 seconds\n",
-      "\n",
-      "Numba ultra-parallel version:\n",
-      "Using 8 threads (ultra-parallel)\n",
-      "Ultra-parallel tensor filling: 0.2504s\n",
-      "Total time: 0.2506s\n",
-      "generate_spiked_matrix_tensor_ultra_parallel took 0.2507 seconds\n"
+      "\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "The number of threads must be between 1 and 2",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 228\u001b[0m\n\u001b[1;32m    226\u001b[0m \u001b[38;5;66;03m# Quick test\u001b[39;00m\n\u001b[1;32m    227\u001b[0m N \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m200\u001b[39m\n\u001b[0;32m--> 228\u001b[0m x, T \u001b[38;5;241m=\u001b[39m \u001b[43mgenerate_spiked_matrix_tensor_numba\u001b[49m\u001b[43m(\u001b[49m\u001b[43mN\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1.0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1.0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mseed\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m42\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    229\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mTensor shape: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mT\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    230\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSpike norm: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnp\u001b[38;5;241m.\u001b[39mlinalg\u001b[38;5;241m.\u001b[39mnorm(x)\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m (expected: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnp\u001b[38;5;241m.\u001b[39msqrt(N)\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m)\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[4], line 13\u001b[0m, in \u001b[0;36mtiming_decorator.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;129m@wraps\u001b[39m(func)\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mwrapper\u001b[39m(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m     12\u001b[0m     start \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mperf_counter()\n\u001b[0;32m---> 13\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     14\u001b[0m     end \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mperf_counter()\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfunc\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m took \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mend\u001b[38;5;250m \u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;250m \u001b[39mstart\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m seconds\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[4], line 75\u001b[0m, in \u001b[0;36mgenerate_spiked_matrix_tensor_numba\u001b[0;34m(N, Delta2, Delta_p, p, seed, n_threads)\u001b[0m\n\u001b[1;32m     73\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m n_threads \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     74\u001b[0m     n_threads \u001b[38;5;241m=\u001b[39m multiprocessing\u001b[38;5;241m.\u001b[39mcpu_count()\n\u001b[0;32m---> 75\u001b[0m \u001b[43mset_num_threads\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn_threads\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     76\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUsing \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mn_threads\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m threads\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     78\u001b[0m start_total \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mperf_counter()\n",
+      "File \u001b[0;32m/home/groups/earlew/yuchen/miniconda3/envs/sicpred_env_conda/lib/python3.12/site-packages/numba/np/ufunc/parallel.py:610\u001b[0m, in \u001b[0;36mset_num_threads\u001b[0;34m(n)\u001b[0m\n\u001b[1;32m    608\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(n, (\u001b[38;5;28mint\u001b[39m, np\u001b[38;5;241m.\u001b[39minteger)):\n\u001b[1;32m    609\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe number of threads specified must be an integer\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 610\u001b[0m \u001b[43msnt_check\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    611\u001b[0m _set_num_threads(n)\n",
+      "File \u001b[0;32m/home/groups/earlew/yuchen/miniconda3/envs/sicpred_env_conda/lib/python3.12/site-packages/numba/np/ufunc/parallel.py:572\u001b[0m, in \u001b[0;36mgen_snt_check.<locals>.snt_check\u001b[0;34m(n)\u001b[0m\n\u001b[1;32m    570\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msnt_check\u001b[39m(n):\n\u001b[1;32m    571\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m n \u001b[38;5;241m>\u001b[39m NUMBA_NUM_THREADS \u001b[38;5;129;01mor\u001b[39;00m n \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m--> 572\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(msg)\n",
+      "\u001b[0;31mValueError\u001b[0m: The number of threads must be between 1 and 2"
      ]
     }
    ],
@@ -759,7 +713,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
